--- a/style.css
+++ b/style.css
@@ -3,15 +3,16 @@ body{
 	background-color: black;
 }
 #container{
-	width: 1000px;
-	height: 550px;
+	width: 1500px;
+	height: 800px;
 	background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(joker.jpg);
-	margin: 20px auto;	
+	margin:20px auto;	
 }
 #calculator{
 	width: 320px;
 	height: 520px;
 	background-color: #eaedef;
+	background-image: url(img.jpg);
 	margin: 0 auto;
 	top: 20px;
 	position: relative;
